deployment-dev.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    env: dev  # TODO: Replace environment. [prod / env]
    version: v1  # TODO: Replace major version
    app: bulk-sms # TODO: Replace app name 
    project: bulk-sms  # TODO: Replace project name 
    revision: dev_v1.68 # TODO: Replace environment. [prod / env], major and minor version 
    service: bulk-sms # TODO: Replace app name 
  name: bulk-sms-service-dev # TODO: Replace app name  and environment
  namespace: services #  TODO: Replace namespace. See doc for options.  
spec:
  type: ClusterIP
  ports:
  - port: 8185  # TODO: customise port
    name: http
    targetPort: 8185  # TODO: customise port
    protocol: TCP
  selector:
    env: dev  # TODO: Replace environment. [prod / env]
    version: v1  # TODO: Replace major version
    app: bulk-sms # TODO: Replace app name 
---
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    env: dev  # TODO: Replace environment. [prod / env]
    version: v1 # TODO: Replace major version
    app: bulk-sms # TODO: Replace app name 
    project: bulk-sms # TODO: Replace project name 
    revision: dev_v1.68 # TODO: Replace environment. [prod / env], major and minor version 
    deployment: bulk-sms # TODO: Replace app name 
  name: bulk-sms-deployment-dev # TODO: Replace app name  and environment
  namespace: services #  TODO: Replace namespace. See doc for options. 
spec:
  replicas: 1  # TODO: Replace number of replicas
  selector:
    matchLabels:
      env: dev  # TODO: Replace environment. [prod / env]
      version: v1  # TODO: Replace major version
      app: bulk-sms # TODO: Replace app name 
  template:
    metadata:
      labels:
        env: dev  # TODO: Replace environment. [prod / env]
        version: v1  # TODO: Replace major version
        app: bulk-sms # TODO: Replace app name 
        revision: dev_v1.68 # TODO: Replace environment. [prod / env], major and minor version 
    spec:
      serviceAccountName: bulk-sms-account  # TODO: Replace app name
      imagePullSecrets:
      - name: us-east-1-ecr-registry
      containers:  
      - image: 126480227765.dkr.ecr.us-east-1.amazonaws.com/bulk-sms:dev_v1.68  # TODO: Replace app name, environment, major and minor version.
        name: bulk-sms-container  # TODO: Replace app name.
        ports:
        - containerPort: 8185 # TODO: replace with container port
        resources:
          requests:
            cpu: "100m"
            memory: 300Mi
          limits:
            memory: 1Gi
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: services #  TODO: Replace namespace. See doc for options.
  name: bulk-sms-virtual-service-dev # TODO: Replace app name  and environment
  labels:
    env: dev  # TODO: Replace environment. [prod / env]  
    version: v1  # TODO: Replace major version  
    app: bulk-sms # TODO: Replace app name
    virtualservice: bulk-sms  # TODO: Replace app name
spec:
  hosts:
  - bulk-sms-dev.oltranz.com  # TODO: replace with URL used to access service. Must have DNS record. 
  gateways:
   # TODO: Uncomment appropriate gateway.  See doc for all options.
  - istio-system/oltranz-star-ingress-gateway # for *.oltranz.com URLS
  # - istio-system/endpoint-star-ingress-gateway # for *.endpoint.oltranz.com URLS.
  http:
  - match:
    - uri:
        prefix: / 
    route:
    - destination:
        host: "bulk-sms-service-dev.services.svc.cluster.local"  # TODO: replace service name, env and namespace
        port:
          number: 8185 # TODO: replace with container port
